--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,40 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Thermodynamics Calculator</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>First Law of Thermodynamics</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      
+      <ion-item>
+        <ion-label position="floating">Heat Added (Q) in Joules</ion-label>
+        <ion-input type="number" [(ngModel)]="Q"></ion-input>
+      </ion-item>
+
+     
+      <ion-item>
+        <ion-label position="floating">Work Done (W) in Joules</ion-label>
+        <ion-input type="number" [(ngModel)]="W"></ion-input>
+      </ion-item>
+
+      
+      <ion-item>
+        <ion-label position="floating">Change in Internal Energy (ΔU) in Joules</ion-label>
+        <ion-input type="number" [(ngModel)]="deltaU"></ion-input>
+      </ion-item>
+
+      
+      <ion-button expand="block" (click)="compute()">Compute</ion-button>
+
+     
+      <ion-item *ngIf="result">
+        <ion-label>{{ result }}</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
